# cmake-cpp

./: .appveyor.yml  .dockerignore  .gitignore  .gitpod.yml  .travis.yml  CMakeLists.txt  Makefile  README.md
.ci/: Makefile
.ci/docker/alpine/: Dockerfile
.ci/docker/archlinux/: Dockerfile
.ci/docker/ubuntu/: Dockerfile
.github/workflows/: aarch64_docker.yml  aarch64_toolchain.yml  aarch64_toolchain_cmake.yml  amd64_bsd_cmake.yml  amd64_docker.yml  amd64_docker_cmake.yml  amd64_freebsd.yml  amd64_freebsd_cmake.yml  amd64_linux.yml  amd64_linux_cmake.yml  amd64_macos.yml  amd64_macos_cmake.yml  amd64_web.yml  amd64_web_cmake.yml  amd64_windows.yml  amd64_windows_cmake.yml  arm.yml  arm64_docker.yml  arm64_docker_cmake.yml  arm64_macos_cmake.yml  arm_linux.yml  arm_toolchain.yml  arm_toolchain_cmake.yml  cpp.yml  docker.yml  linux.yml  macos.yml  mips.yml  mips64_toolchain.yml  mips64_toolchain_cmake.yml  mips_linux.yml  mips_toolchain.yml  powerpc_toolchain.yml  powerpc_toolchain_cmake.yml  riscv64_docker.yml  riscv64_docker_cmake.yml  riscv64_toolchain.yml  riscv64_toolchain_cmake.yml  s390x_toolchain.yml  s390x_toolchain_cmake.yml  (+2 more)
.theia/: settings.json  tasks.json
Bar/: CMakeLists.txt
Bar/include/bar/: Bar.hpp
Bar/src/: Bar.cpp
Bar/test/: CMakeLists.txt
Foo/: CMakeLists.txt
Foo/src/: Foo.cpp
Foo/test/: CMakeLists.txt
FooBar/: CMakeLists.txt
FooBar/include/foobar/: FooBar.hpp
FooBar/src/: FooBar.cpp
FooBar/test/: CMakeLists.txt
FooBar/tests/: CMakeLists.txt  foobar_test.cpp
FooBarApp/: CMakeLists.txt
FooBarApp/src/: main.cpp
ci/: Makefile  README.md
ci/doc/: deps.dot  docker.dot
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/arm/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/mips/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/toolchain/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docker/web/: Dockerfile
ci/docs/: docker.dot
ci/sample/: CMakeLists.txt  main.cpp
ci/samples/: CMakeLists.txt  main.cpp
ci/vagrant/freebsd/: Vagrantfile
cmake/: CMakeCPPConfig.cmake.in  CMakeCppConfig.cmake.in  Makefile  check_deps.cmake  cpp.cmake  host.CMakeLists.txt  system_deps.cmake
cmake/dependencies/: CMakeLists.txt
cmake/docker/alpine/: setup.sh
cmake/sample/: CMakeLists.txt  main.cpp
docker/ubuntu/: InstallDockerfile
examples/: CMakeLists.txt  example.cpp
test/config/: CMakeLists.txt  main.cpp
tools/: cross_compile.sh
